# substreams-eth-token-transfers

./: Cargo.toml  Makefile  README.md  build.rs  package.json  schema.graphql  subgraph.yaml  substreams.yaml
proto/: approvals.proto  token.proto  transfers.proto
src/: lib.rs
